Customize SEO on pages

--- a/blogs.html
+++ b/blogs.html
@@ -24,7 +24,7 @@
     <title>Blogs | Salman Azeez</title>
     <link rel="shortcut icon" href="img/favicon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Know about my web development skills, web frameworks and technologies. A detailed version of me as a web developer.">
+    <meta name="description" content="Blogs of web application and site technologies and trends.">
     <meta name="keywords" content="web developer, web application, frontend, frontend developer, ui, web design, website design, web designer, software, software engineer, web de, how to become a web developer, how to develop a web site">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
