--- a/projects/bt-publisher.html
+++ b/projects/bt-publisher.html
@@ -21,20 +21,20 @@
 	</script>
 	<!-- End Google Tag Manager -->
 
-	<title>Business Today | Publisher Website</title>
+	<title>Publisher Website | Business Today</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta property="og:title" content="Business Today">
-	<meta property="og:description" content="Publisher website which contains monthly articles of Buiness Today magazine. Website has varity of articles of business world including successful entrepreneurs' interviews." />
+	<meta property="og:description" content="Publisher website built using Laravel and Foundation ZURB. Website has varity of articles of business world including successful entrepreneurs' interviews." />
 	<meta name="og:Business Today" property="og:title" content="Business Today">
 	<meta name="og:Business Today" property="og:url" content="https://salmanazeez.github.io/projects/bt-publisher.html">
 	<meta property="og:image" content="https://salmanazeez.github.io/img/projects/bt-publisher/home.jpg">
-	<meta name="description" content="TPublisher website project which was developed using Laravel, ZURB Foundation and MySQL">
-	<meta name="keywords" content="laravel, mysql, php, sass, foundation, frameworks, aws, javascript, publisher website, web development">
+	<meta name="description" content="Publisher website project which was developed using Laravel, ZURB Foundation and MySQL">
+	<meta name="keywords" content="web design, how to make a website, ui design, responsive web design, laravel, mysql, php, sass, foundation, frameworks, aws, javascript, publisher website, web development">
 	<!-- Twitter card -->
 	<meta name="twitter:card" content="summary">
 	<meta name="twitter:url" content="https://salmanazeez.github.io/projects/bt-publisher.html">
 	<meta name="twitter:title" content="Business Today: Publisher website">
-	<meta name="twitter:description" content="Publisher website which contains monthly articles of Buiness Today magazine. Website has varity of articles of business world including successful entrepreneurs' interviews.">
+	<meta name="twitter:description" content="Publisher website built using Laravel and Foundation ZURB. Website has varity of articles of business world including successful entrepreneurs' interviews.">
 	<meta name="twitter:image" content="https://salmanazeez.github.io/img/projects/bt-publisher/home.jpg">
 	<meta name="twitter:image:width" content="600">
 	<meta name="twitter:image:height" content="600">
