--- a/projects/gamasamaga.html
+++ b/projects/gamasamaga.html
@@ -21,20 +21,21 @@
 	</script>
 	<!-- End Google Tag Manager -->
 
-	<title>A dialogue with the village | Web Application</title>
+	<title>Web Application | Dialogue with the village</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta property="og:title" content="A dialogue with the village">
-	<meta property="og:description" content="A web application which helps people around the country to reach SLPP political party and give them ideas on how to build the country for better future. People now can write a digital form on what are the needs for their country or places." />
-	<meta name="og:A dialogue with the village" property="og:title" content="A dialogue with the village">
-	<meta name="og:A dialogue with the village" property="og:url" content="https://salmanazeez.github.io/projects/gamasamaga.html">
+	<meta property="og:title" content="Dialogue with the village">
+	<meta property="og:description" content="Web application developer using Angular and Angular Material asn front-end and ruby on rails as back-end which helps people around the country to reach SLPP political party and give them ideas on how to build the country for better future. People now can write Digital form on what are the needs for their country or places." />
+	<meta name="og:Dialogue with the village" property="og:title" content="Dialogue with the village">
+	<meta name="og:Dialogue with the village" property="og:url" content="https://salmanazeez.github.io/projects/gamasamaga.html">
 	<meta property="og:image" content="https://salmanazeez.github.io/img/projects/gamasamaga/home.jpg">
 	<meta name="description" content="This is a web application project which was done using Angular, Angular Material and RUby on Rails.">
-	<meta name="keywords" content="angular, angularjs, angularJS, angular material, rub, ruby on rails, aws, javascript, web application, web development">
+	<meta name="keywords" content="javascript, how to create a website, how to create a website, web app, ecommerce website, web site development, web application development, application development, angularjs, angularJS, angular material, rub, ruby on rails, aws, web application, web developer,
+	web development">
 	<!-- Twitter card -->
 	<meta name="twitter:card" content="summary">
 	<meta name="twitter:url" content="https://salmanazeez.github.io/projects/gamasamaga.html">
-	<meta name="twitter:title" content="A dialogue with the village: Web Application">
-	<meta name="twitter:description" content="A web application which helps people around the country to reach SLPP political party and give them ideas on how to build the country for better future. People now can write a digital form on what are the needs for their country or places.">
+	<meta name="twitter:title" content="Dialogue with the village: Web Application">
+	<meta name="twitter:description" content="Web application developer using Angular and Angular Material asn front-end and ruby on rails as back-end which helps people around the country to reach SLPP political party and give them ideas on how to build the country for better future. People now can write Digital form on what are the needs for their country or places.">
 	<meta name="twitter:image" content="https://salmanazeez.github.io/img/projects/gamasamaga/home.jpg">
 	<meta name="twitter:image:width" content="600">
 	<meta name="twitter:image:height" content="600">
@@ -82,7 +83,7 @@
 	<section class="p-3 p-md-5">
 		<div class="row">
 			<div class="col-12 text-center">
-				<h1>A dialogue with the village</h1>
+				<h1>Dialogue with the village</h1>
 				<p class="sub-heading secondary-text text-center">Junior Web <span class="dev-span">Developer</span></p>
 			</div>
 		</div>
@@ -102,7 +103,7 @@
 			<div class="col-12">
 				<p>This is a web application developed for SLPP. This apllication has a simple front-end where users can sign in or sign up and submit an idea or a proposal. Users should be able to input ideas or proposal in three different languages which are Sinhala, Tamil and English therefore my senior came up with using a custom Angular Material input using Google's transliteration service which detects and transliterate to the selected language from English input. Back-end (admin dashboard) was the challenging phase of the development. Admin dashboard had to allow multiple user types, contain all the data of the users and the data which are entered by operators.</p>
 				<p>It was important to understand how my senior developer build our designs so I started learning our development. For front-end we used Angular and Angular Material and for back-end we used Ruby on Rails. Previously for front-end, I worked mainly with HTML and CSS and for back-end I worked with PHP so I had to learn more Javascript and Ruby on Rails.</p>
-				<p>There were some visual guidelines created by my teammate but there was dedicated time to building a design system. Understanding Angular and how it affects to modularization helped me to translate the visual guidelines to variables and to better align components.</p>
+				<p>There were some visual guidelines created by my teammate but there was dedicated time to building Design system. Understanding Angular and how it affects to modularization helped me to translate the visual guidelines to variables and to better align components.</p>
 				<p><strong>Live application: </strong><a href="https://www.gamasamaga.com/en/home" class="live-link" target="_blank">gamasamaga.com</a></h6>
 				<h5>Technologies and tools</h5>
 				<p class="secondary-text">Angular, Angular Material, Ruby on Rails, AWS, MongoDB, GitKraken, VS Code</p>
