Add ALT text for images on projects

--- a/blogs/architecture-app.html
+++ b/blogs/architecture-app.html
@@ -114,11 +114,11 @@
 		<div class="row">
 			<div class="col-12 text-center">
 				<div class="sreenshot-container">
-					<img src="../img/blogs/architecture/home.jpg" class="img-fluid mt-3 mb-2" alt="Screenshot of the website">
+					<img src="../img/blogs/architecture/home.jpg" class="img-fluid mt-3 mb-2" alt="Homepage of React App">
 					<label><i class="img-caption">Homepage</i></label>
 				</div>
 				<div class="sreenshot-container">
-					<img src="../img/blogs/architecture/objects.jpg" class="img-fluid mt-3 mb-2" alt="Screenshot of the website">
+					<img src="../img/blogs/architecture/objects.jpg" class="img-fluid mt-3 mb-2" alt="About page of React App">
 					<label><i class="img-caption">Objects page</i></label>
 				</div>
 			</div>
