--- a/projects/gamasamaga.html
+++ b/projects/gamasamaga.html
@@ -92,7 +92,7 @@
 	<section>
 		<div class="row text-center">
 			<div class="col-12">
-				<img src="../img/projects/gamasamaga/laptop-image.png" class="img-fluid" alt="Screenshot of website in a laptop screen">
+				<img src="../img/projects/gamasamaga/laptop-image.png" class="img-fluid" alt="Angular web application on a laptop screen.">
 			</div>
 		</div>
 	</section>
@@ -116,35 +116,35 @@
 		<div class="row">
 			<div class="col-12 text-center">
 				<div class="sreenshot-container">
-					<img src="../img/projects/gamasamaga/home.jpg" class="img-fluid mt-3 mb-2" alt="Screenshot of the website">
+					<img src="../img/projects/gamasamaga/home.jpg" class="img-fluid mt-3 mb-2" alt="Angular web application homepage">
 					<label><i class="img-caption">Homepage</i></label>
 				</div>
 				<div class="sreenshot-container">
-					<img src="../img/projects/gamasamaga/about.jpg" class="img-fluid mt-3 mb-2" alt="Screenshot of the website">
+					<img src="../img/projects/gamasamaga/about.jpg" class="img-fluid mt-3 mb-2" alt="Angular web application about page">
 					<label><i class="img-caption">About page</i></label>
 				</div>
 				<div class="sreenshot-container">
-					<img src="../img/projects/gamasamaga/idea1.jpg" class="img-fluid mt-3 mb-2" alt="Screenshot of the website">
+					<img src="../img/projects/gamasamaga/idea1.jpg" class="img-fluid mt-3 mb-2" alt="Angular web application customized page">
 					<label><i class="img-caption">Select idea page</i></label>
 				</div>
 				<div class="sreenshot-container">
-					<img src="../img/projects/gamasamaga/idea2.jpg" class="img-fluid mt-3 mb-2" alt="Screenshot of the website">
+					<img src="../img/projects/gamasamaga/idea2.jpg" class="img-fluid mt-3 mb-2" alt="Angular web application developed page">
 					<label><i class="img-caption">Submit idea page</i></label>
 				</div>
 				<div class="sreenshot-container">
-					<img src="../img/projects/gamasamaga/proposal.jpg" class="img-fluid mt-3 mb-2" alt="Screenshot of the website">
+					<img src="../img/projects/gamasamaga/proposal.jpg" class="img-fluid mt-3 mb-2" alt="Angular web application form page">
 					<label><i class="img-caption">Submit proposal page</i></label>
 				</div>
 				<div class="sreenshot-container">
-					<img src="../img/projects/gamasamaga/sign-up.jpg" class="img-fluid mt-3 mb-2" alt="Screenshot of the website">
+					<img src="../img/projects/gamasamaga/sign-up.jpg" class="img-fluid mt-3 mb-2" alt="Angular web application sign up page">
 					<label><i class="img-caption">User sign up page</i></label>
 				</div>
 				<div class="sreenshot-container">
-					<img src="../img/projects/gamasamaga/login.jpg" class="img-fluid mt-3 mb-2" alt="Screenshot of the website">
+					<img src="../img/projects/gamasamaga/login.jpg" class="img-fluid mt-3 mb-2" alt="Angular web application login page">
 					<label><i class="img-caption">User login page</i></label>
 				</div>
 				<div class="sreenshot-container">
-					<img src="../img/projects/gamasamaga/profile.jpg" class="img-fluid mt-3 mb-2" alt="Screenshot of the website">
+					<img src="../img/projects/gamasamaga/profile.jpg" class="img-fluid mt-3 mb-2" alt="Angular web application profile page">
 					<label><i class="img-caption">User profile page</i></label>
 				</div>
 			</div>
