--- a/projects/bt-publisher.html
+++ b/projects/bt-publisher.html
@@ -91,7 +91,7 @@
 	<section>
 		<div class="row text-center">
 			<div class="col-12">
-				<img src="../img/projects/bt-publisher/laptop-image.png" class="img-fluid" alt="Screenshot of website in a laptop screen">
+				<img src="../img/projects/bt-publisher/laptop-image.png" class="img-fluid" alt="Laravel website hompage on a laptop screen.">
 			</div>
 		</div>
 	</section>
@@ -116,31 +116,31 @@
 		<div class="row">
 			<div class="col-12 text-center">
 				<div class="sreenshot-container">
-					<img src="../img/projects/bt-publisher/home.jpg" class="img-fluid mt-3 mb-2" alt="Screenshot of the website">
+					<img src="../img/projects/bt-publisher/home.jpg" class="img-fluid mt-3 mb-2" alt="Laravel website homepage">
 					<label><i class="img-caption">Homepage</i></label>
 				</div>
 				<div class="sreenshot-container">
-					<img src="../img/projects/bt-publisher/category.jpg" class="img-fluid mt-3 mb-2" alt="Screenshot of the website">
+					<img src="../img/projects/bt-publisher/category.jpg" class="img-fluid mt-3 mb-2" alt="Laravel website category page">
 					<label><i class="img-caption">Interviews category page</i></label>
 				</div>
 				<div class="sreenshot-container">
-					<img src="../img/projects/bt-publisher/article.jpg" class="img-fluid mt-3 mb-2" alt="Screenshot of the website">
+					<img src="../img/projects/bt-publisher/article.jpg" class="img-fluid mt-3 mb-2" alt="Laravel website articles page">
 					<label><i class="img-caption">Article page</i></label>
 				</div>
 				<div class="sreenshot-container">
-					<img src="../img/projects/bt-publisher/archives.jpg" class="img-fluid mt-3 mb-2" alt="Screenshot of the website">
+					<img src="../img/projects/bt-publisher/archives.jpg" class="img-fluid mt-3 mb-2" alt="Laravel website customized page">
 					<label><i class="img-caption">Print issues page</i></label>
 				</div>
 				<div class="sreenshot-container">
-					<img src="../img/projects/bt-publisher/flipbook.jpg" class="img-fluid mt-3 mb-2" alt="Screenshot of the website">
+					<img src="../img/projects/bt-publisher/flipbook.jpg" class="img-fluid mt-3 mb-2" alt="Laravel website flipbook for PDF">
 					<label><i class="img-caption">Flipbook</i></label>
 				</div>
 				<div class="sreenshot-container">
-					<img src="../img/projects/bt-publisher/contact.jpg" class="img-fluid mt-3 mb-2" alt="Screenshot of the website">
+					<img src="../img/projects/bt-publisher/contact.jpg" class="img-fluid mt-3 mb-2" alt="Laravel website contact page">
 					<label><i class="img-caption">Contact page</i></label>
 				</div>
 				<div class="sreenshot-container">
-					<img src="../img/projects/bt-publisher/about.jpg" class="img-fluid mt-3 mb-2" alt="Screenshot of the website">
+					<img src="../img/projects/bt-publisher/about.jpg" class="img-fluid mt-3 mb-2" alt="Laravel website about page">
 					<label><i class="img-caption">About page</i></label>
 				</div>
 			</div>
