Add repo link to architecture blog

--- a/blogs/architecture-app.html
+++ b/blogs/architecture-app.html
@@ -103,6 +103,7 @@
 				<p>On the go, realized that web app was simple yet significant with some cool features. I used Material UI along with the web app. Web app is fully responsive and cross-browser compatible. Homepage has a cool and simple background slider (carousel) and I used React Background Slider package.</p>
 				<p>I was a beginner using React. Building this template helped me to build myself and gain a thorough knowledge of React and Material UI.</p>
 				<p><strong>Clone the repo or view the code: </strong><a href="https://github.com/salmanazeez/architecture-app" class="live-link" target="_blank">github.com/salmanazeez/architecture-app</a></h6>
+				<p><strong>GitHub repo: </strong><a href="https://github.com/salmanazeez/architecture-app" class="live-link" target="_blank">architecture-app</a></h6>
 				<h5>Technologies and tools</h5>
 				<p class="secondary-text">React, Material UI, Sass, React Bootstrap, GitHub, VS Code</p>
 			</div>
