--- a/about.html
+++ b/about.html
@@ -236,8 +236,8 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="https://cdn.rawgit.com/kimmobrunfeldt/progressbar.js/0.6.1/dist/progressbar.js"></script>
-    <script src="js/progress.js"></script>
-    <script src="js/scroll.js"></script>
+    <script src="js/progress.js" async></script>
+    <script src="js/scroll.js" async></script>
     
 </body>
 </html>
