--- a/about.html
+++ b/about.html
@@ -78,7 +78,7 @@
             <div class="col-sm-12 col-md-8 p-3 p-md-5 introduction-text">
                 <p>Hi there, I'm Salman Azeez from Sri Lanka. I'm a professional <strong>web developer specialized in front-end development.</strong> I love designing websites to deliver the best for my clients. As a professional web developer, my experience and commitment towards my projects has enabled me to develop websites with <strong>increased performance and speed, create significant traffic, rank high in the search engines and helped me in coding amazing websites.</strong></p>
                 <p>Creating unique websites was my vision, which turned to reality. And that was possible when my skills and knowledge across various platforms came in-hand and paved my way towards<strong>comprehending the marketing tactics, to design websites</strong> that differentiates it from other competitors. <strong>It also allows me to focus strictly on the originality to brand a business, while still meeting the expectations of the industry and niche area so that it stands apart from the crowd.</strong></p>
-                <p>Specializing in this industry has parallelly encouraged me in enhancing my knowledge and skills in the field of <strong>cross-platform app development</strong>, digital marketing, search engine optimization and web analytics. Delving deep into this fantastic industry has enabled me <strong>to deliver the best output according to the given requirements before the deadline.</strong> I can learn new things rapidly, and I'm adaptable to cope with new trends excellently.</p>
+                <p>Specializing in this industry has parallelly encouraged me in enhancing my knowledge and skills in the field of <strong>mobile application development</strong>, digital marketing, search engine optimization and web analytics. Delving deep into this fantastic industry has enabled me <strong>to deliver the best output according to the given requirements before the deadline.</strong> I can learn new things rapidly, and I'm adaptable to cope with new trends excellently.</p>
                 <p>While I'm not debugging some code or trying to position elements right, I love to hang out with my friends, play video games, listen to music, watch movies, eat pizza and I am obsessed with <span class="friends">F<span class="dot1">.</span>R<span class="dot2">.</span>I<span class="dot3">.</span>E<span class="dot4">.</span>N<span class="dot5">.</span>D<span class="dot6">.</span>S</span> - TV series.</p>
                 <div class="resume-download">
                     <a href="pdf/Salman Azeez.pdf" target="_blank"><button type="button" class="btn btn-danger">Download resume <span class="fa fa-download"></span></button></a>
@@ -106,7 +106,7 @@
             <div class="col-sm-12 col-md-4 mt-3">
                 <label>UI/UX</label>
                 <div class="progress">
-                    <div class="progress-bar bg-gray" role="progressbar" style="width: 45%" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
+                    <div class="progress-bar bg-gray" role="progressbar" style="width: 45%" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
             </div>
         </div>
