--- a/about.html
+++ b/about.html
@@ -198,8 +198,23 @@
                 </a>
             </div>
             <div class="col-12">
-                <p class="secondary-text hideme">February 2019 - Present</p>
-                <p>I started off my career as a fresher after my graduation and joined as a trainee web developer. With time, I was given the opportunity to take in charge of company websites. Later on, I worked as a junior web developer on a web application with the senior, and I stand currently working as a web developer on our new project.</p>
+                <p class="secondary-text hideme">February 2019 - February 2020</p>
+                <p>I started off my career as a fresher after my graduation and joined as a trainee web developer. With time, I was given the opportunity to take in charge of company websites. Later on, I worked as a junior web developer on a web application with the senior, and I stood working as a web developer on my last project at the company.</p>
+            </div>
+            <div class="col-4 container-divider mt-4 mb-4"></div>
+        </div>
+	
+	<!-- Atera -->
+        <div class="btoptions-container">
+            <div class="col-12 mt-5 company-contanier">
+                <h4 class="hideme">UI Engineer</h4>
+                <a href="http://atera.io/" target="_blank">
+                    <h5 class="float-md-right company-name secondary-text">Atera Technologies</strong></h5>
+                </a>
+            </div>
+            <div class="col-12">
+                <p class="secondary-text hideme">February 2020 - Present</p>
+                <p>Joined as UI Engineer and in-charge of all the front-end and UI of our company projects.</p>
             </div>
             <div class="col-4 container-divider mt-4 mb-4"></div>
         </div>
