--- a/about.html
+++ b/about.html
@@ -214,7 +214,7 @@
             </div>
             <div class="col-12">
                 <p class="secondary-text hideme">February 2020 - Present</p>
-                <p>Joined as UI Engineer and in-charge of all the front-end and UI of our company projects.</p>
+                <p>As UI Engineer, in-charge of all the front-end and UI of our company projects.</p>
             </div>
             <div class="col-4 container-divider mt-4 mb-4"></div>
         </div>
