--- a/about.html
+++ b/about.html
@@ -199,7 +199,7 @@
             </div>
             <div class="col-12">
                 <p class="secondary-text hideme">February 2019 - February 2020</p>
-                <p>I started off my career as a fresher after my graduation and joined as a trainee web developer. With time, I was given the opportunity to take in charge of company websites. Later on, I worked as a junior web developer on a web application with the senior, and I stood working as a web developer on my last project at the company.</p>
+                <p>Worked with the senior software engineer as a web developer, using numerous technologies. Role included contributing to system design discussions, researching technologies and frameworks, and completing development tasks. Successfully completed two web development projects. Additional duties included content management for the company websites.</p>
             </div>
             <div class="col-4 container-divider mt-4 mb-4"></div>
         </div>
