--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <div class="sub mt-4">
           <p>This is me</p>
         </div>
-        <p class="mt-4">I'm Salman Azeez. I'm a professional front-end/web developer from Kandy, Sri Lanka.</p>
+        <p class="mt-4">I'm Salman Azeez. A front-end/web developer from Kandy, Sri Lanka.</p>
         <div class="col-sm-6 col-md-12">
           <a href="works.html"><button class="btn btn-danger works mt-3">Works</button></a>
           <a href="contact.html"><button class="btn btn-outline-light contact mt-3">Contact me</button></a>
