--- a/about.html
+++ b/about.html
@@ -190,7 +190,7 @@
         </div>
 	    
  	<!-- Atera -->
-        <div class="btoptions-container">
+        <div class="atera-container">
             <div class="col-12 mt-5 company-contanier">
                 <h4 class="hideme">UI Engineer</h4>
                 <a href="http://atera.io/" target="_blank">
