Add agreement text

--- a/works.html
+++ b/works.html
@@ -137,6 +137,12 @@
             </div>
         </div>
     </div>
+	
+    <div class="row">
+	<div class="col-12">
+  	    <p class="secondary-text">Few projects are not public because of the non-disclosure agreements. Detail case studies of them can be provided upon request.</p>
+        </div>
+    </div>
 
     <!-- Scripts -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
