--- a/works.html
+++ b/works.html
@@ -140,7 +140,7 @@
 	
     <div class="row">
 	<div class="col-12">
-  	    <p class="secondary-text">Few projects are not public because of the non-disclosure agreements. Detail case studies of them can be provided upon request.</p>
+		<p class="secondary-text"><strong>Few projects are not public because of the non-disclosure agreements. Detail case studies of them can be provided upon request.</strong></p>
         </div>
     </div>
 
