Fix agreement text

--- a/works.html
+++ b/works.html
@@ -117,7 +117,7 @@
             </div>
 		
 	  <div class="col-12">
-	      <p class="secondary-text"><strong>Few projects are not public because of the non-disclosure agreements. Detail case studies of them can be provided upon request.</strong></p>
+	      <p class="secondary-text text-center"><strong>Few projects are not public because of the non-disclosure agreements. Detail case studies of them can be provided upon request.</strong></p>
           </div>
         </div>
     </section>
