--- a/about.html
+++ b/about.html
@@ -73,7 +73,7 @@
                 <p class="sub-heading text-center">I love coding! <span class="secondary-heading">Yes, I mean it!</span></p>
             </div>
             <div class="col-sm-12 col-md-4 p-5 text-center align-self-center">
-                <img src="img/about/mine.jpeg" class="img-fluid" alt="placeholder">
+                <img src="img/about/mine.jpg" class="img-fluid" alt="placeholder">
             </div>
             <div class="col-sm-12 col-md-8 p-3 p-md-5 introduction-text">
                 <p>Hi there, I'm Salman Azeez from Sri Lanka. I'm a professional web developer specialised in front-end development. I can help you own an outstanding websites focusing strictly on the originality to brand your business, while still meeting the expectations of the industry and niche area so that it stands apart from the crowd.</p>
