Update the about page

--- a/about.html
+++ b/about.html
@@ -76,10 +76,10 @@
                 <img src="img/about/mine.jpg" class="img-fluid" alt="web developer, portfolio, salman azeez, frontend developer">
             </div>
             <div class="col-sm-12 col-md-8 p-3 p-md-5 introduction-text">
-                <p>Hi there, I'm Salman Azeez from Sri Lanka. I'm a professional web developer specialised in front-end development. I can help you own an outstanding websites focusing strictly on the originality to brand your business, while still meeting the expectations of the industry and niche area so that it stands apart from the crowd.</p>
-                <p>I develop sites linking together, the world of design and technology packing up the utility of the back end in an engaging way for users to interact.</p>
+                <p>Hi there, I'm Salman Azeez from Sri Lanka. I'm a professional web developer specialised in UI/UX engineering and front-end development. I can help you own an outstanding websites focusing strictly on the originality to brand your business, while still meeting the expectations of the industry and niche area so that it stands apart from the crowd.</p>
+                <p>I design and develop sites linking together, the world of design and technology packing up the utility of the back end in an engaging way for users to interact.</p>
                 <p>With my knowledge and skills across various platforms, and by comprehending to the marketing tactics, I've always delivered a promising website, with increased performance and speed, fully secured coding and by creating significant traffic to rank high in the search engine with speedy development and user satisfied outcome.</p>
-                <p>With the use of latest technologies, and my potential to create amazing functions using HTML, CSS, JavaScript and other frameworks, has always assisted me in developing a webpage application according to my client's requirements, mobile-first websites that are responsive to all screens and sizes by building fast responding features and structures powering the app to meet, react and work quickly.</p>
+                <p>With the use of latest technologies and tools, and my potential to design and create amazing functions using Figma, HTML, CSS, JavaScript and other technologies, has always assisted me in developing a webpage application according to my client's requirements, mobile-first websites that are responsive to all screens and sizes by building fast responding features and structures powering the app to meet, react and work quickly.</p>
                 <p>My experience and specialisation in this industry has uplifted my teamwork skills and the ability to work with agencies, written and verbal communication skills and to articulate with the technology team. It has benefited me to have an excellent understanding based on responsive design principles, and it's an implementation in the coding side, but has also helped me code secure websites from scratch, manage everything from implementation bug elimination and functional testing, and design compelling websites where the structures will create an extra edge for the development of powerful websites due to its default styles. I learn new things rapidly, and I'm adaptable to cope with new trends excellently.</p>
                 <p>While I'm not debugging some code or trying to position elements right, I love to hang out with my friends, play video games, listen to music, watch movies, eat pizza and I am obsessed with <span class="friends">F<span class="dot1">.</span>R<span class="dot2">.</span>I<span class="dot3">.</span>E<span class="dot4">.</span>N<span class="dot5">.</span>D<span class="dot6">.</span>S</span> - TV series.</p>
                 <div class="resume-download">
@@ -93,22 +93,22 @@
     <section class="p-3 p-md-5">
         <h2 class="hideme">Skills</h2>
         <div class="row hideme">
+	   <div class="col-sm-12 col-md-4 mt-3">
+                <label>UI/UX</label>
+                <div class="progress">
+                    <div class="progress-bar bg-gray" role="progressbar" style="width: 85%" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
+                </div>
+            </div>
             <div class="col-sm-12 col-md-4 mt-3">
                 <label>Front-end development</label>
                 <div class="progress">
-                    <div class="progress-bar bg-gray" role="progressbar" style="width: 85%" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
+                    <div class="progress-bar bg-gray" role="progressbar" style="width: 65%" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
             </div>
             <div class="col-sm-12 col-md-4 mt-3">
                 <label>Back-end development</label>
                 <div class="progress">
-                    <div class="progress-bar bg-gray" role="progressbar" style="width: 65%" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-            </div>
-            <div class="col-sm-12 col-md-4 mt-3">
-                <label>UI/UX</label>
-                <div class="progress">
-                    <div class="progress-bar bg-gray" role="progressbar" style="width: 45%" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
+                    <div class="progress-bar bg-gray" role="progressbar" style="width: 35%" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
             </div>
         </div>
@@ -201,7 +201,7 @@
             </div>
             <div class="col-12">
                 <p class="secondary-text hideme">February 2020 - Present</p>
-                <p>Working closely with the teams to identify and provide solutions to UI issues in various projects while coding for front-end.</p>
+                <p>Gathering and evaluating user requirements, in collaboration with product managers and engineers to create the design mock-ups and write the actual code to build responsive websites and web applications. Currently focusing on carving the front-end techs.</p>
             </div>
             <div class="col-4 container-divider mt-4 mb-4"></div>
         </div>
